--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,10 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
-
+    <script>
+    jQuery(document).ready({
+        jQuery(document).foundation();
+    });
+</script>
   </body>
 </html>
