--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,11 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
+ <script src="/bower_components/foundation-sites/dist/foundation.min.js"></script>
     <script>
-    jQuery(document).ready({
-        jQuery(document).foundation();
+    $(document).ready(function(){
+        $(document).foundation();
     });
-</script>
+    </script>
   </body>
 </html>
