--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,9 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
- <script src="/bower_components/foundation-sites/dist/foundation.min.js"></script>
+
+ <script src="/bower_components/foundation-sites/js/foundation.core.js"></script>
+ <script src="/bower_components/foundation-sites/js/foundation.accordionMenu.js"></script>
     <script>
     $(document).ready(function(){
         $(document).foundation();
