Modif infos, ajout de post sur profile, search user, register OK

--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,12 @@
     <!-- endinject -->
     <!-- endbuild -->
 
- <script src="/bower_components/foundation-sites/js/foundation.core.js"></script>
- <script src="/bower_components/foundation-sites/js/foundation.accordionMenu.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/foundation-sites/dist/foundation.min.js"></script>
+    <script src="/bower_components/what-input/what-input.min.js"></script>
+    <script src="/bower_components/angular-foundation/mm-foundation.js"></script>
     <script>
-    $(document).ready(function(){
         $(document).foundation();
-    });
     </script>
   </body>
 </html>
