--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/foundation-sites/dist/foundation.min.js"></script>
     <script src="/bower_components/what-input/what-input.min.js"></script>
